--- a/page-frontend/templates/management/tags/add.html
+++ b/page-frontend/templates/management/tags/add.html
@@ -1,5 +1,5 @@
 {% extends "management/base.html" %}
-{% block title %}Add Article{% endblock %}
+{% block title %}Add Tag{% endblock %}
 {%block toolbar%}{% include "management/toolbar.html" %} {% endblock %}
 {%block content%}
 <form method="post" action="/management/tags/add">
