--- a/page-frontend/templates/management/categories/add.html
+++ b/page-frontend/templates/management/categories/add.html
@@ -1,5 +1,5 @@
 {% extends "management/base.html" %}
-{% block title %}Add Article{% endblock %}
+{% block title %}Add Category{% endblock %}
 {%block toolbar%}{% include "management/toolbar.html" %} {% endblock %}
 {%block content%}
 <form method="post" action="/management/categories/add">
@@ -9,7 +9,7 @@
         <label for="name">Name</label>
     </div>
 
-        <button type="submit" class="btn btn-primary">Submit</button>
+    <button type="submit" class="btn btn-primary">Submit</button>
     </div>
 </form>
 {% endblock %}
